--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,10 @@ __pycache__/
 *configs_v2*
 *README_v2.md*
 *ridet*
+**/*.jpg
+**/*.png
+**/*.JPG
+**/*.PNG
 
 tools/*/test_dota/*
 tools/*/test_hrsc/*
