--- a/track_by_detection/requirements.txt
+++ b/track_by_detection/requirements.txt
@@ -1,11 +1,12 @@
 numpy
 numba
+pandas
 opencv-python
 matplotlib
 scipy
 tqdm
 multiprocessing
 joblib
-tensorflow-gpu==2.x
+cvxpy
 "git+https://github.com/cvxgrp/cvxpy.git#egg=cvxpy[glpk]"
 cvxopt
